--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -42,10 +41,11 @@
       <hr>
       
       <section id="contact">
-        <h2>Contact Me</h2>
+        <h3>Contact Me</h3>
         <ul> <!--linked my links-->
           <li><a href="https://github.com/hayatakahashi">GitHub</a></li>
           <li><a href="mailto:hayataka95@gmail.com">Email</a></li>
+          <li><a href="https://www.linkedin.com">LinkedIn</a></li>
         </ul>
       </section>
     </main>
